--- a/src/MA/UserBundle/Resources/config/routing.yml
+++ b/src/MA/UserBundle/Resources/config/routing.yml
@@ -2,40 +2,85 @@ ma_user_homepage:
     path:     /
     defaults: { _controller: MAUserBundle:User:index }
 
+# Pour articles
 ma_user_articles:
     path:     /articles
     defaults: { _controller: MAUserBundle:User:articles }
 
-ma_user_articles_spe:
+ma_user_article_spe:
     path:     /articles/{articleId}
     defaults: { _controller: MAUserBundle:User:articles }
     requirements:
-        routesId: \d+
+        articleId: \d+
 
 ma_user_article_edit:
-    path:     /article/edit/{articleId}
+    path:     /article/modifier/{articleId}
     defaults: { _controller: MAUserBundle:User:articleEdit }
     requirements:
-        routesId: \d+
+        articleId: \d+
 
 ma_user_article_delete:
-    path:     /article/delete/{articleId}
+    path:     /article/supprimer/{articleId}
     defaults: { _controller: MAUserBundle:User:articleDelete }
     requirements:
-        routesId: \d+
+        articleId: \d+
 
 ma_user_article_new:
     path:     /article/nouveau
     defaults: { _controller: MAUserBundle:User:articleNew }
 
+# Pour photos
 ma_user_photos:
     path:     /photos
     defaults: { _controller: MAUserBundle:User:photos }
 
+ma_user_photos_spe:
+    path:     /photos/{type}
+    defaults: { _controller: MAUserBundle:User:photos }
+
+ma_user_photo_new:
+    path:     /photos/nouveau/{type}
+    defaults: { _controller: MAUserBundle:User:photoNew }
+
+ma_user_photo_delete:
+    path:     /photos/supprimer/{type}/{photoId}
+    defaults: { _controller: MAUserBundle:User:photoDelete }
+    requirements:
+        photoId: \d+
+
+# Pour videos
 ma_user_videos:
     path:     /videos
     defaults: { _controller: MAUserBundle:User:videos }
 
+ma_user_videos_spe:
+    path:     /videos/{type}
+    defaults: { _controller: MAUserBundle:User:videos }
+
+ma_user_videos_spe_video:
+    path:     /videos/{type}/{videoId}
+    defaults: { _controller: MAUserBundle:User:videos }
+    requirements:
+        videoId: \d+
+
+ma_user_video_new:
+    path:     /videos/nouveau/{type}
+    defaults: { _controller: MAUserBundle:User:videoNew }
+
+ma_user_video_edit:
+    path:     /videos/modifier/{type}/{videoId}
+    defaults: { _controller: MAUserBundle:User:videoEdit }
+    requirements:
+        videoId: \d+
+
+ma_user_video_delete:
+    path:     /videos/supprimer/{type}/{videoId}
+    defaults: { _controller: MAUserBundle:User:videoDelete }
+    requirements:
+        videoId: \d+
+
+
+# Pour contenu du site
 ma_user_content:
     path:     /content
     defaults: { _controller: MAUserBundle:User:content }
