Ajouter une partie

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@ composer.phar
 # UserFiles (No need to exchange those files. Keep them local.)
 web/img/articles/*
 web/img/photos/*
+web/img/besoins/*
