--- a/src/MA/UserBundle/Resources/config/routing.yml
+++ b/src/MA/UserBundle/Resources/config/routing.yml
@@ -125,5 +125,106 @@ ma_user_project_delete:
 
 # Pour contenu du site
 ma_user_content:
-    path:     /content
+    path:     /content/
     defaults: { _controller: MAUserBundle:User:content }
+
+ma_user_content_spe:
+    path:     /content/{pageId}
+    defaults: { _controller: MAUserBundle:User:content }
+    requirements:
+        pageId: \d+
+
+ma_user_content_new:
+    path:     /content/page/nouveau/
+    defaults: { _controller: MAUserBundle:User:contentNew }
+
+ma_user_content_edit:
+    path:     /content/page/modifier/{pageId}
+    defaults: { _controller: MAUserBundle:User:contentNew }
+    requirements:
+        pageId: \d*
+
+ma_user_content_delete:
+    path:     /content/supprimer/{pageId}
+    defaults: { _controller: MAUserBundle:User:contentDelete }
+    requirements:
+        pageId: \d+
+
+# Pour contenu du site
+ma_user_diapos:
+    path:     /diapos/
+    defaults: { _controller: MAUserBundle:User:diapos }
+
+ma_user_diapos_new:
+    path:     /diapos/nouveau/
+    defaults: { _controller: MAUserBundle:User:diapoNew }
+
+ma_user_diapos_delete:
+    path:     /diapos/supprimer/{diapoId}
+    defaults: { _controller: MAUserBundle:User:diapoDelete }
+    requirements:
+        diapoId: \d+
+
+# Pour photos de fond de page
+ma_user_BG_photos:
+    path:     /BG_photos/
+    defaults: { _controller: MAUserBundle:User:BGPhotos }
+
+ma_user_BG_photos_new:
+    path:     /BG_photos/page/nouveau/
+    defaults: { _controller: MAUserBundle:User:BGPhotoNew }
+
+ma_user_BG_photos_edit:
+    path:     /BG_photos/page/modifier/{BGPhotoId}
+    defaults: { _controller: MAUserBundle:User:BGPhotoNew }
+    requirements:
+        BGPhotoId: \d*
+
+ma_user_BG_photos_delete:
+    path:     /BG_photos/supprimer/{BGPhotoId}
+    defaults: { _controller: MAUserBundle:User:BGPhotoDelete }
+    requirements:
+        BGPhotoId: \d+
+
+
+# Pour les éléments d'aide du site
+ma_user_aides:
+    path:     /aides/
+    defaults: { _controller: MAUserBundle:User:aides }
+
+ma_user_aides_new:
+    path:     /aides/nouveau/
+    defaults: { _controller: MAUserBundle:User:aideNew }
+
+ma_user_aides_edit:
+    path:     /aides/modifier/{aideId}
+    defaults: { _controller: MAUserBundle:User:aideNew }
+    requirements:
+        aideId: \d*
+
+ma_user_aides_delete:
+    path:     /aides/supprimer/{aideId}
+    defaults: { _controller: MAUserBundle:User:aideDelete }
+    requirements:
+        aideId: \d+
+
+# Pour les partenaires d'aide du site
+ma_user_partners:
+    path:     /partners/
+    defaults: { _controller: MAUserBundle:User:partners }
+
+ma_user_partners_new:
+    path:     /partners/nouveau/
+    defaults: { _controller: MAUserBundle:User:partnerNew }
+
+ma_user_partners_edit:
+    path:     /partners/modifier/{partnerId}
+    defaults: { _controller: MAUserBundle:User:partnerNew }
+    requirements:
+        partnerId: \d*
+
+ma_user_partners_delete:
+    path:     /partners/supprimer/{partnerId}
+    defaults: { _controller: MAUserBundle:User:partnerDelete }
+    requirements:
+        partnerId: \d+
