last modif before relecture

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@ web/img/articles/*
 web/img/photos/*
 web/img/besoins/*
 web/img/diapos/*
+web/img/pages/*
 web/img/BGPhotos/*
 web/img/aides/*
 web/img/partenaires/*
